--- a/OperaExt/browser_extension/styles/main.css
+++ b/OperaExt/browser_extension/styles/main.css
@@ -7,6 +7,7 @@
     padding: 10px;
     border: 2px solid black;
     border-radius: 8px;
+    font-size: 18px;
 }
 
 .translatedTextContainer textarea {
@@ -17,6 +18,8 @@
     padding: 10px;
     border: 2px solid black;
     border-radius: 8px;
+    font-size: 18px;
+    color: black;
 }
 
 .buttonsContainer {
@@ -26,9 +29,20 @@
     padding: 5px;
 }
 
-.buttonLine{
+.buttonLine {
     display: flex;
     justify-content: space-around;
+}
+
+
+.buttonClickAnimation {
+    animation: colorChange 2s forwards;
+}
+
+@keyframes colorChange {
+    100% {
+        background-color: black;
+    }
 }
 
 .button {
@@ -45,6 +59,3 @@
 .button:hover {
     background-color: #575757;
 }
-
-
-
